# accounting-system

./: .env  .env.example  Cargo.toml  README.md  database_schema.sql
.claude/: settings.local.json
src/: config.rs  lib.rs  main.rs
src/database/: connection.rs
src/handlers/: account_book.rs  account_book_reports.rs  api.rs  auth.rs  category.rs  dashboard.rs  mod.rs  transaction.rs
src/middleware/: auth.rs
src/models/: account_book.rs  category.rs  mod.rs  transaction.rs  user.rs
src/services/: account_service.rs  auth_service.rs  email_service.rs  mod.rs
src/utils/: mod.rs  password.rs  validator.rs
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html
templates/account_books/: detail.html  edit.html  list.html  new.html  reports.html
templates/auth/: login.html  register.html  verify_email.html
templates/categories/: edit.html  list.html  new.html
templates/dashboard/: index.html
templates/transactions/: edit.html  list.html  new.html
