[package]
name = "accounting-system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "json", "rust_decimal"] }

# 模板引擎
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 密码加密
argon2 = "0.5"
rand = "0.8"

# JWT和认证
jsonwebtoken = "9.2"

# 邮件发送
lettre = "0.11"

# 表单验证
validator = { version = "0.18", features = ["derive"] }

# 配置管理
config = "0.14"

# 环境变量
dotenvy = "0.15"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 会话管理
async-session = "3.0"

# HTTP类型
http = "1.0"

# 数字类型
rust_decimal = { version = "1.33", features = ["serde"] }

# Cookie和额外的axum功能
axum-extra = { version = "0.9", features = ["cookie"] }

# 时间处理
time = { version = "0.3", features = ["serde", "macros"] }

# URL编码
urlencoding = "2.1"

[dev-dependencies]
# 测试
tokio-test = "0.4"
